# PythonDnd

./: README.md  pyproject.toml
static/css/: dnd.css
templates/: about.html  base.html  index.html
