[tool.poetry]
name = "py-tutur"
version = "0.1.0"
description = ""
authors = ["EugeneAE <eremin.ea@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyleniumio = "^1.20.0"
autopep8 = "^2.0.4"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
